Trying out the pug syntax

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p I don't really get the syntax but I guess it looks simple enough
