--- a/views/genre_list.pug
+++ b/views/genre_list.pug
@@ -7,7 +7,7 @@ block content
     each genre in genre_list
       li
         a(href=genre.url) #{genre.title}
-        |  (#{genre.name})
+        |  #{genre.name}
 
     else
       li There are no genres.
