--- a/views/genre_list.pug
+++ b/views/genre_list.pug
@@ -6,8 +6,7 @@ block content
   ul
     each genre in genre_list
       li
-        a(href=genre.url) #{genre.title}
-        |  #{genre.name}
+        a(href=genre.url) #{genre.name}
 
     else
       li There are no genres.
